:zap: make navbar fixed to add translate effect on mobile

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,10 @@
 .navbar {
-    position: relative;
+    position: fixed;
+    top: 0;
     padding: 1.5em;
     width: 100%;
+    background-color: #eeeeee;
+    z-index: 500;
 }
 
 .navbar__logo {
@@ -12,15 +15,18 @@
 
 /* Menu open once button is clicked */
 .navbar__menu {
-    display: none;
+    display: block;
+    position: fixed;
+    transform: translateX(200%);
     justify-content: center;
-    width: 100%;
+    width: 90vw;
     background-color: #0000EC;
     font-family: 'IBM Plex Mono', sans-serif;
     color: #fff;
     font-size: 1.6rem;
     list-style: none;
-
+    transition: all .5s;
+    margin: 0 auto;
 }
 
 .navbar__menu--desktop{
@@ -41,12 +47,13 @@
 
 #navbar__button {
     display: none;
-    transition: all .3s ease-in-out;
 }
 
 #navbar__button:checked~.navbar__menu {
     display: block;
+    transform: translateX(0);
     margin-top: 1rem;
+    z-index: 500;
 }
 
 .navbar__button {
@@ -103,6 +110,10 @@
 
 }
 
+.header{
+    margin-top: 5rem;
+}
+
 .header__description {
     padding: 2rem;
 }
@@ -141,6 +152,12 @@
     font-size: 1.6rem;
     font-weight: 500;
     border: none;
+}
+
+.btn:active{
+    transform: scale(0.98);
+    background-image: linear-gradient(225deg, #0000FE, #00F0B8, #00F0B8);
+    background-size: 200%;
 }
 
 @media screen and (min-width: 37.5rem) {
@@ -238,5 +255,11 @@
         background-position: right;
         color: #fff;
         transform: scale(1.05);
+    }
+
+    .btn:active{
+        transform: scale(0.98);
+        background-image: linear-gradient(225deg, #0000FE, #00F0B8, #00F0B8);
+        background-size: 200%;
     }
 }
