--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
 html {
     font-size: 62.5%;
     font-family: 'IBM Plex Sans', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
